    this/next/last day/week/month/year as an alternative to an explicit
    date range
  - Added link.@dynamic-load-id attribute to load a link into a
    dynamic-container using its ID
  - Added 'screen' option for link.@url-type to refer directly to a screen
    without going through a transition (technically transition can do this
    too, but looks funny); made @url-type an expanded string
- Entity Facade:
  - Added in operator (_op) for searchFormInputs/search-form-inputs
  - Added entity.field.@default attribute with a Groovy expression to set a
    default for a field based on other fields, constants, etc
  - Added DataDocumentCondition.operator field, uses same operator values
    as XML Actions econdition.@operator

Bug Fixes:

- Fixed delete buttons not working on the Find Auto Screen
- Fixed links with images (link.image element) FTL error
- Required service parameters used to use the Groovy definition of empty
  but this is annoying for numbers and such (a zero is generally a valid
  non-empty service parameter), so now uses null for any object or zero
  length String as the definition of empty for required parameters
- Fixed issues with complex-alias where aliased entities were not add
  to list of aliased entities used and alias level function was not added
- Fixed tx cache issue where a value could be updated after putting it into
  the cache causing an attempt to read the original to get an updated value
- Changed ResourceReference.init() to use ExecutionContextFactory instead
  of ExecutionContext for cases where the object is long-lived
- Fixed search#DataDocuments issues with documentType parameter, adding it
  to the count query (was getting wrong counts because it was left out),
  set to null if an empty String as ElasticSearch treats that as a real one

===========================================================================
Release 1.4.1 - 01 Aug 2014
===========================================================================
